# perception-routines

./: CHANGELOG.md  README.md  cabal.project  elements.md  hie.yaml  intro.txt  perception-routines.cabal  pride-and-prejudice.txt
.github/workflows/: ci.yaml
Perception/: Directive.hs  Gen.hs  Routine.hs  State.hs  Tactic.hs
Perception/Routine/: Domain.hs  Id.hs  Mnemonic.hs  Probability.hs
Perception/Routine/Mnemonic/: LetterFrequency.hs  LetterWeight.hs
Perception/State/: Internal.hs
app/: Main.hs
app/gen-letter-weights/: Main.hs
app/proutine/: Main.hs
template/: LetterWeight.mustache
tests/Perception/: DirectiveSpec.hs  RoutineSpec.hs  TacticSpec.hs
