cabal-version:      2.4
name:               perception-routines
version:            0.0.1.0
license:            BSD-3-Clause
license-file:       LICENSE.md
maintainer:         Mark Karpov <markkarpov92@gmail.com>
author:             Mark Karpov <markkarpov92@gmail.com>
tested-with:        ghc ==9.6.5 ghc ==9.8.2 ghc ==9.10.1
homepage:           https://github.com/mrkkrp/perception-routines
bug-reports:        https://github.com/mrkkrp/perception-routines/issues
synopsis:           An implementation of perception routines in Haskell
description:        An implementation of perception routines in Haskell.
category:           Text
build-type:         Simple
extra-source-files:
    intro.txt
    pride-and-prejudice.txt
    template/LetterWeight.mustache

extra-doc-files:
    CHANGELOG.md
    README.md

source-repository head
    type:     git
    location: https://github.com/mrkkrp/perception-routines.git

flag dev
    description: Turn on development settings.
    default:     False
    manual:      True

library
    exposed-modules:
        Perception.Directive
        Perception.Gen
        Perception.Routine
        Perception.Routine.Domain
        Perception.Routine.Id
        Perception.Routine.Mnemonic
        Perception.Routine.Mnemonic.LetterFrequency
        Perception.Routine.Mnemonic.LetterWeight

    default-language: GHC2021
    build-depends:
        QuickCheck >=2.14,
        base >=4.15 && <5,
        containers >=0.5 && <0.8,
        splitmix >=0.1 && <0.2,
        text >=0.2 && <2.2,
        transformers >=0.4 && <0.7

    if flag(dev)
        ghc-options:
            -Wall -Werror -Wredundant-constraints -Wpartial-fields
            -Wunused-packages -Wno-unused-imports

    else
        ghc-options: -O2 -Wall

executable proutine
    main-is:          Main.hs
    hs-source-dirs:   app/proutine
    other-modules:    Paths_perception_routines
    autogen-modules:  Paths_perception_routines
    default-language: GHC2021
    build-depends:
        base >=4.15 && <5,
        file-embed >=0.0.12,
        gitrev >=1.3 && <1.4,
        optparse-applicative >=0.14 && <0.19,
        perception-routines,
        splitmix >=0.1 && <0.2,
        text >=0.2 && <2.2

    if flag(dev)
        ghc-options:
            -Wall -Werror -Wredundant-constraints -Wpartial-fields
            -Wunused-packages

    else
        ghc-options: -O2 -Wall

executable gen-letter-weights
    main-is:          Main.hs
    hs-source-dirs:   app/gen-letter-weights
    other-modules:    Paths_perception_routines
    autogen-modules:  Paths_perception_routines
    default-language: GHC2021
    build-depends:
        aeson >=2 && <3,
        base >=4.15 && <5,
        containers >=0.5 && <0.8,
        gitrev >=1.3 && <1.4,
        optparse-applicative >=0.14 && <0.19,
        stache >=2.3 && <3,
        text >=0.2 && <2.2

    if flag(dev)
        ghc-options:
            -Wall -Werror -Wredundant-constraints -Wpartial-fields
            -Wunused-packages

    else
        ghc-options: -O2 -Wall

test-suite tests
    type:               exitcode-stdio-1.0
    main-is:            Spec.hs
    build-tool-depends: hspec-discover:hspec-discover >=2 && <3
    hs-source-dirs:     tests
    other-modules:
        Perception.DirectiveSpec
        Perception.RoutineSpec

    default-language:   GHC2021
    build-depends:
        QuickCheck >=2 && <3,
        base >=4.15 && <5,
        hspec >=2 && <3,
        perception-routines,
        splitmix >=0.1 && <0.2,
        text >=0.2 && <2.2

    if flag(dev)
        ghc-options:
            -Wall -Werror -Wredundant-constraints -Wpartial-fields
            -Wunused-packages

    else
        ghc-options: -O2 -Wall
